// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollGradient Rendering renders gradient in x-direction 1`] = `
<ScrollGradient
  className="class"
  color="blue"
  direction="X"
  getScrollElementRef={[Function]}
  hideStartGradient={false}
  onScroll={[Function]}
  scrollElementClassName="class"
>
  <div
    className="security--scroll-gradient security--scroll-gradient--none security--scroll-gradient--x class"
    role="presentation"
  >
    <div
      aria-hidden={true}
      className="security--scroll-gradient__before"
      role="presentation"
      style={
        Object {
          "backgroundImage": "linear-gradient(-90deg, rgba(0,0,0,0), blue 90%)",
        }
      }
    />
    <div
      className="security--scroll-gradient__content class"
      onScroll={[Function]}
    >
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet rerum aliquid perferendis, nulla nam ad excepturi, iure earum dolorum ipsa quae cum voluptatibus nemo quis debitis, aperiam repudiandae dolore deleniti.
      </p>
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet rerum aliquid perferendis, nulla nam ad excepturi, iure earum dolorum ipsa quae cum voluptatibus nemo quis debitis, aperiam repudiandae dolore deleniti.
      </p>
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet rerum aliquid perferendis, nulla nam ad excepturi, iure earum dolorum ipsa quae cum voluptatibus nemo quis debitis, aperiam repudiandae dolore deleniti.
      </p>
    </div>
    <div
      aria-hidden={true}
      className="security--scroll-gradient__after"
      role="presentation"
      style={
        Object {
          "backgroundImage": "linear-gradient(-90deg, blue 10%, rgba(0,0,0,0))",
        }
      }
    />
  </div>
</ScrollGradient>
`;

exports[`ScrollGradient Rendering renders gradient in y-direction by default 1`] = `
<ScrollGradient
  className="class"
  color="blue"
  direction="Y"
  getScrollElementRef={[Function]}
  hideStartGradient={false}
  onScroll={[Function]}
  scrollElementClassName="class"
>
  <div
    className="security--scroll-gradient security--scroll-gradient--none security--scroll-gradient--y class"
    role="presentation"
  >
    <div
      aria-hidden={true}
      className="security--scroll-gradient__before"
      role="presentation"
      style={
        Object {
          "backgroundImage": "linear-gradient(0deg, rgba(0,0,0,0), blue 90%)",
        }
      }
    />
    <div
      className="security--scroll-gradient__content class"
      onScroll={[Function]}
    >
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet rerum aliquid perferendis, nulla nam ad excepturi, iure earum dolorum ipsa quae cum voluptatibus nemo quis debitis, aperiam repudiandae dolore deleniti.
      </p>
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet rerum aliquid perferendis, nulla nam ad excepturi, iure earum dolorum ipsa quae cum voluptatibus nemo quis debitis, aperiam repudiandae dolore deleniti.
      </p>
      <p>
        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet rerum aliquid perferendis, nulla nam ad excepturi, iure earum dolorum ipsa quae cum voluptatibus nemo quis debitis, aperiam repudiandae dolore deleniti.
      </p>
    </div>
    <div
      aria-hidden={true}
      className="security--scroll-gradient__after"
      role="presentation"
      style={
        Object {
          "backgroundImage": "linear-gradient(0deg, blue 10%, rgba(0,0,0,0))",
        }
      }
    />
  </div>
</ScrollGradient>
`;
